--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -13,6 +13,9 @@
       <div class="card-body">
         <h5 class="card-title">TinyURL for: <%= longURL %></h5>
         <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
+        <form method="POST" action="/urls" input type="text">
+          <button type="submit" class="btn btn-outline-danger">Delete</button>
+        </form>
       </div>
     <div class="card-footer text-muted"></div>
   </div>
