--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -6,16 +6,20 @@
   <title>URL - TinyApp Example</title>
 </head>
 
-<body>
+<body> 
   <header><%- include('partials/_header') %></header>
   <div class="card text-center">
       <div class="card-header"></div>
       <div class="card-body">
         <h5 class="card-title">TinyURL for: <%= longURL %></h5>
         <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
-        <form method="POST" action="/urls" input type="text">
-          <button type="submit" class="btn btn-outline-danger">Delete</button>
-        </form>
+        <h2 class="card-title">Edit</h2>
+        <form method="POST" action="/urls">
+          <label for="new URL">New URL:</label>
+          <input type="text">
+          <button type="button" class="btn btn-primary">Submit</button>
+      </form>
+    </div>
       </div>
     <div class="card-footer text-muted"></div>
   </div>
