--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -17,7 +17,7 @@
         <form method="POST" action="/urls">
           <label for="new URL">New URL:</label>
           <input type="text">
-          <button type="button" class="btn btn-primary">Submit</button>
+          <button type="submit" class="btn btn-primary">Submit</button>
       </form>
     </div>
       </div>
