--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -27,11 +27,10 @@
             <td><%= url %></td>
             <td><%= urls[url] %></td>
             <td>
-              <form method="GET" action="/urls/<%= url %>"><button type="button" class="btn btn-outline-primary">Edit</button>
-              </form>
+              <button type="button" class="btn btn-outline-primary"><a href="/urls/<%= url %>">Edit</a></button>
               </td>
             <td>
-              <form method="POST" action="/urls/<%= urls %>/delete"><button type="submit" class="btn btn-outline-danger">Delete</button></form>
+              <form method="POST" action="/urls/<%= url %>/delete"><button type="submit" class="btn btn-outline-danger">Delete</button></form>
               </td>
           </tr>
         <% } %>
