--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -11,4 +11,7 @@
       </div>
     </div>
   </nav>
+  <form method="POST" action="/urls/<%= url %>/delete"><button type="submit" class="btn btn-outline-dark">Login</button></form>
 </header>
+
+
