--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -11,7 +11,7 @@
       </div>
     </div>
   </nav>
-  <form method="POST" action="/urls/<%= url %>/delete"><button type="submit" class="btn btn-outline-dark">Login</button></form>
+  <form method="POST" action="/login"><button type="submit" class="btn btn-outline-dark">Login</button></form>
 </header>
 
 
