Update so a username is passed to each EJS template and update position of logout button

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -11,7 +11,11 @@
       </div>
     </div>
     <% if(username) { %>   
-      <span><h3>Username: <%=username%> </h3>
+      <span>
+        <form method="POST" action="/logout">
+          Logged in As: <%=username%>
+          <button type="submit" class="btn btn-outline-dark">Logout</button>
+        </form>
       </span> 
       <% } else { %>
         <form method="POST" action="/login">
