--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -23,6 +23,7 @@
         </tr>
       </thead>
       <tbody>
+        <% if(username) { %>  
         <% for(let url in urls) { %>
           <tr>
             <td><%= url %></td>
@@ -34,6 +35,7 @@
               <form method="POST" action="/urls/<%= url %>/delete"><button type="submit" class="btn btn-outline-danger">Delete</button></form>
               </td>
           </tr>
+        <% } %>
         <% } %>
       </tbody>
       <href='#'></href>
