--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -12,7 +12,13 @@
 
   <body>
 
-    <header><%- include('partials/_header') %></header>
+    <header>
+      <% if (user) { %>
+        <%- include('partials/_header', {user: user}) %>
+      <% } else { %>
+        <%- include('partials/_header') %>
+        <% } %>
+      </header>
 
     <main style="margin: 1em;">
       <h3>Create Account</h3>
