--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -12,7 +12,11 @@
 
   <body>
 
-    <header><%- include('partials/_header') %></header>
+    <header><% if (user) { %>
+      <%- include('partials/_header', {user: user}) %>
+    <% } else { %>
+      <%- include('partials/_header') %>
+      <% } %></header>
 
     <main style="margin: 1em;">
       <h3>Create TinyURL</h3>
