--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -10,7 +10,13 @@
   <title>TinyApp</title>
 </head>
 <body>
-  <header><%- include('partials/_header') %></header>
+  <header>
+  <% if (user) { %>
+    <%- include('partials/_header', {user: user}) %>
+  <% } else { %>
+    <%- include('partials/_header') %>
+    <% } %>
+  </header>
   <main style="margin: 1em;">
     <h3>My URLs</h3>
     <table class="table">
@@ -23,7 +29,7 @@
         </tr>
       </thead>
       <tbody>
-        <% if(username) { %>  
+        <% if(user) { %>  
         <% for(let url in urls) { %>
           <tr>
             <td><%= url %></td>
